--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Garden Guru</a>
+        <%= link_to "Garden Guru", root_path, class: "navbar-brand"%>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <%= link_to "About", about_path, class: "nav-link", aria_current: "page"%>
             </li>
             <li class="nav-item">
-            <%= link_to "Plants", plants_path, class: "nav-link" %>
+            <%= link_to "My Plants", plants_path, class: "nav-link" %>
             </li>
         </ul>
     </div>
