--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -1,42 +1,48 @@
-<%= form_with(model: plant) do |form| %>
-  <% if plant.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(plant.errors.count, "error") %> prohibited this plant from being saved:</h2>
+<div class="card">
+  <div class="card-body">
+    <%= form_with(model: plant) do |form| %>
+      <% if plant.errors.any? %>
+        <div id="error_explanation" class="alert alert-danger alert-dismissible fade show" role="alert">
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          <h4><%= pluralize(plant.errors.count, "error") %> prohibited this plant from being saved:</h4>
+          <ul>
+            <% plant.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-      <ul>
-        <% plant.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+      <div class="field mb-3">
+        <%= form.label :name, class: "form-label" %>
+        <%= form.text_field :name, class: "form-control", placeholder: "ex: Common Sunflower" %>
+      </div>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+      <div class="field mb-3">
+        <%= form.label :scientific_name, class: "form-label" %>
+        <%= form.text_field :scientific_name, class: "form-control", placeholder: "ex: Helianthus annuus" %>
+      </div>
+
+      <div class="field mb-3">
+        <%= form.label :average_height, class: "form-label" %>
+        <%= form.text_field :average_height, class: "form-control", placeholder: "ex: 182.5" %>
+      </div>
+
+      <div class="field mb-3">
+        <%= form.label :life_cycle, class: "form-label" %>
+        <%= form.text_field :life_cycle, class: "form-control", placeholder: "ex: annual" %>
+      </div>
+
+      <div class="field mb-3 form-check">
+        <%= form.label :is_consumable, class: "form-label" %>
+        <%= form.check_box :is_consumable, class: "form-check-input" %>
+      </div>
+      
+      <div class="actions">
+        <%= form.submit class:"btn btn-primary btn-lg"%>
+      </div>
+
+    <% end %>
+
   </div>
-
-  <div class="field">
-    <%= form.label :scientific_name %>
-    <%= form.text_field :scientific_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :average_height %>
-    <%= form.text_field :average_height %>
-  </div>
-
-  <div class="field">
-    <%= form.label :life_cycle %>
-    <%= form.text_field :life_cycle %>
-  </div>
-
-  <div class="field">
-    <%= form.label :is_consumable %>
-    <%= form.check_box :is_consumable %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
