--- a/app/views/plants/edit.html.erb
+++ b/app/views/plants/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this plant", @plant %> |
-  <%= link_to "Back to plants", plants_path %>
+  <%= link_to "Show this plant", @plant, class: "btn btn-secondary btn-sm" %>
+  <%= link_to "Back to plants", plants_path, class: "btn btn-secondary btn-sm"%>
 </div>
