--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New plant</h1>
+<h1>New plant 🌿</h1>
 
 <%= render "form", plant: @plant %>
 
 <br>
 
 <div>
-  <%= link_to "Back to plants", plants_path %>
+  <%= link_to "Back to plants", plants_path, class: "btn btn-outline-primary btn-sm"%>
 </div>
